--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ cryptography==43.0.3
 defusedxml==0.7.1
 Django==3.2.25
 django-allauth==0.50.0
+django-crispy-forms==1.14.0
 httplib2==0.22.0
 idna==3.10
 oauth2==1.9.0.post1
 oauthlib==3.2.2
+pillow==11.0.0
 pycparser==2.22
 PyJWT==2.9.0
 pyparsing==3.2.0
