--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,6 @@ pytz==2024.2
 requests==2.32.3
 requests-oauthlib==2.0.0
 sqlparse==0.5.1
+stripe==11.3.0
 typing_extensions==4.12.2
 urllib3==2.2.3
