--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cryptography==43.0.3
 defusedxml==0.7.1
 Django==3.2.25
 django-allauth==0.50.0
+django-countries==7.2.1
 django-crispy-forms==1.14.0
 httplib2==0.22.0
 idna==3.10
