--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,19 @@ cffi==1.17.1
 charset-normalizer==3.4.0
 cryptography==43.0.3
 defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==3.2.25
 django-allauth==0.50.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
+gunicorn==23.0.0
 httplib2==0.22.0
 idna==3.10
 oauth2==1.9.0.post1
 oauthlib==3.2.2
+packaging==24.2
 pillow==11.0.0
+psycopg2==2.9.10
 pycparser==2.22
 PyJWT==2.9.0
 pyparsing==3.2.0
