--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.8.1
+boto3==1.35.81
+botocore==1.35.81
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
@@ -9,9 +11,11 @@ Django==3.2.25
 django-allauth==0.50.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
+django-storages==1.14.4
 gunicorn==23.0.0
 httplib2==0.22.0
 idna==3.10
+jmespath==1.0.1
 oauth2==1.9.0.post1
 oauthlib==3.2.2
 packaging==24.2
@@ -20,12 +24,15 @@ psycopg2==2.9.10
 pycparser==2.22
 PyJWT==2.9.0
 pyparsing==3.2.0
+python-dateutil==2.9.0.post0
 python-openid==2.2.5
 python3-openid==3.2.0
 pytz==2024.2
 requests==2.32.3
 requests-oauthlib==2.0.0
+s3transfer==0.10.4
+six==1.17.0
 sqlparse==0.5.1
 stripe==11.3.0
 typing_extensions==4.12.2
-urllib3==2.2.3
+urllib3==1.26.20
